read-only at open time.
[1954268] Aliases and shortcuts now processed correctly during merge.
[1933174, 2015132] Reports from Import (Text or XML), Compare, Merge
and Find are no longer written to disk by default.
[] Expired icon now correct after password change.
[] Current tree state is now updated correctly upon exit (Thanks to
Norman)

Changes to Existing Features in 3.14
====================================
[1958303] TreeView buttons (+/-) now larger without significantly
increasing the visible bitmap image.  Also, now transparent.
[] Drop down list of databases at start-up now retains order of usage
rather than sorted alphabetically.

New Features for 3.14
=====================
[2004500] CTRL-A now selects all of the Notes field in Add & Edit.
[1817880, 2018365] Option to allow restricting only a single instance per user.
If set and another copy of PasswordSafe started, focus is given to the
existing instance.
[] The entries displayed can now be filtered based on rules on every
field in the database.
[] Add Dragbar and also allow D&D from Tree onto a text field to drop the
entry's password value.
[] During initial open, tooltips in the drop down list box will display 
the full database names and paths.

Bugs fixed in 3.13
==================
[1941360] Rename with F2 now enables Save button.
[1940311] Password Policy now ignores length requirements if not applicable.
[1938057] Non-Latin text now correctly exported to plain text file.
[1926678, 1937293,1939294] Reduce GDI object leaks that cause display problems
during hibernation, screen locking and remote access.
[1914433] It is now possible to view the password policy set for an
individual entry, by shift-clicking on the checked Override Policy
checkbox. A tooltip explaining this is shown when relevant.
[1904391] Many functions, e.g.,  cancelling a rename of an entry,
inter-instance Drag & Drop, no longer collapse the entire tree.
[1904254] Non-text fields (e.g., time) are not shown in Advanced